# SD24O_Practica_REST

./: api.py  pyproject.toml
orm/: config.py  esquemas.py  modelos.py  repo.py
